@@ -1,7 +1,18 @@
 package com.safefoodtruck.sft.store.service;
 
+import static com.safefoodtruck.sft.common.message.ValidationMessage.*;
+
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.safefoodtruck.sft.common.util.MemberInfo;
 import com.safefoodtruck.sft.member.domain.Member;
+import com.safefoodtruck.sft.member.exception.NotFoundMemberException;
 import com.safefoodtruck.sft.member.repository.MemberRepository;
 import com.safefoodtruck.sft.menu.domain.Menu;
 import com.safefoodtruck.sft.menu.dto.response.MenuListResponseDto;
@@ -17,21 +28,14 @@ import com.safefoodtruck.sft.store.dto.request.StoreUpdateRequestDto;
 import com.safefoodtruck.sft.store.dto.response.StoreFindResponseDto;
 import com.safefoodtruck.sft.store.dto.response.StoreInfoListResponseDto;
 import com.safefoodtruck.sft.store.dto.response.StoreInfoResponseDto;
-import com.safefoodtruck.sft.store.dto.response.StoreLocationResponseDto;
 import com.safefoodtruck.sft.store.dto.response.StoreNoticeResponseDto;
-import com.safefoodtruck.sft.store.dto.response.StoreRegistResponseDto;
-import com.safefoodtruck.sft.store.dto.response.StoreUpdateResponseDto;
+import com.safefoodtruck.sft.store.exception.NullListException;
 import com.safefoodtruck.sft.store.exception.StoreNotFoundException;
 import com.safefoodtruck.sft.store.repository.StoreImageRepository;
 import com.safefoodtruck.sft.store.repository.StoreRepository;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Slf4j
 @Service
@@ -46,9 +50,10 @@ public class StoreServiceImpl implements StoreService {
 	private final NotificationService notificationService;
 
 	@Override
-	public StoreRegistResponseDto registStore(StoreRegistRequestDto storeRegistRequestDto) {
+	public void registStore(StoreRegistRequestDto storeRegistRequestDto) {
 		String email = MemberInfo.getEmail();
-		Member owner = memberRepository.findByEmail(email);
+		Member owner = memberRepository.findByEmail(email)
+			.orElseThrow(NotFoundMemberException::new);
 		Store store = Store.of(owner, storeRegistRequestDto);
 
 		store.setOwner(owner);
@@ -64,12 +69,10 @@ public class StoreServiceImpl implements StoreService {
 			StoreImage savedStoreImage = storeImageRepository.save(storeImage);
 			savedStoreImage.setStore(store);
 		}
-
-		return StoreRegistResponseDto.fromEntity(email, savedStore);
 	}
 
 	@Override
-	public StoreUpdateResponseDto updateStore(StoreUpdateRequestDto storeUpdateRequestDto) {
+	public void updateStore(StoreUpdateRequestDto storeUpdateRequestDto) {
 		Store store = findLoginStore();
 		store.update(storeUpdateRequestDto);
 
@@ -78,8 +81,6 @@ public class StoreServiceImpl implements StoreService {
 
 		storeRepository.save(store);
 		storeImageRepository.save(storeImage);
-
-		return StoreUpdateResponseDto.fromEntity(store);
 	}
 
 	@Override
@@ -125,11 +126,11 @@ public class StoreServiceImpl implements StoreService {
 	}
 
 	@Override
-	public boolean updateStoreStatus() {
+	public void updateStoreStatus() {
 		Store store = findLoginStore();
 		store.toggleOpenStatus();
-		if (store.getIsOpen()) notificationService.favoriteSendNotify(store.getId(), store.getName());
-		return store.getIsOpen();
+		if (store.getIsOpen().equals(Boolean.TRUE))
+			notificationService.favoriteSendNotify(store.getId(), store.getName());
 	}
 
 	@Override
@@ -144,15 +145,14 @@ public class StoreServiceImpl implements StoreService {
 
 		List<Object[]> averageStarsData = reviewRepository.findAverageStarsForAllStores();
 		Map<Integer, Double> averageStarsMap = averageStarsData.stream()
-			.collect(Collectors.toMap(data -> (Integer) data[0], data -> (Double) data[1]));
+			.collect(Collectors.toMap(data -> (Integer)data[0], data -> (Double)data[1]));
 
 		List<StoreInfoResponseDto> storeInfoResponseDtos = openStores.stream()
 			.map(openStore -> {
 				Double averageStar = averageStarsMap.getOrDefault(openStore.getId(), 0.0);
 				return StoreInfoResponseDto.fromEntity(openStore, averageStar.intValue());
 			})
-			.collect(Collectors.toList());
-		log.info("store count : {}", storeInfoResponseDtos.size());
+			.toList();
 
 		return StoreInfoListResponseDto.builder()
 			.count(storeInfoResponseDtos.size())
@@ -161,22 +161,23 @@ public class StoreServiceImpl implements StoreService {
 	}
 
 	@Override
-	public StoreLocationResponseDto updateStoreLocation(
+	public void updateStoreLocation(
 		StoreLocationRequestDto storeLocationRequestDto) {
 		Store store = findLoginStore();
 		store.updateStoreLocation(storeLocationRequestDto);
 		storeRepository.save(store);
-
-		return StoreLocationResponseDto.fromEntity(store);
 	}
 
 	@Override
-	public StoreNoticeResponseDto updateStoreNotice(StoreNoticeRegistRequestDto storeNoticeRegistRequestDto) {
+	public void updateStoreNotice(StoreNoticeRegistRequestDto storeNoticeRegistRequestDto) {
+		if (storeNoticeRegistRequestDto.connectedEmailList() == null) {
+			throw new NullListException();
+		}
 		Store store = findLoginStore();
+		String ownerEmail = store.getOwner().getEmail();
 		store.updateNotice(storeNoticeRegistRequestDto.notice());
 		storeRepository.save(store);
-		notificationService.changedNoticeNotify(storeNoticeRegistRequestDto.connectedEmailList());
-		return StoreNoticeResponseDto.fromEntity(store);
+		notificationService.changedNoticeNotify(ownerEmail, storeNoticeRegistRequestDto.connectedEmailList());
 	}
 
 	@Override
@@ -185,12 +186,17 @@ public class StoreServiceImpl implements StoreService {
 	}
 
 	@Override
-	public StoreNoticeResponseDto deleteStoreNotice() {
+	public void deleteStoreNotice() {
 		Store store = findLoginStore();
 		store.deleteNotice();
 		storeRepository.save(store);
+	}
 
-		return StoreNoticeResponseDto.fromEntity(store);
+	@Override
+	public String checkDuplicateSafetyLicenseNumber(final String safetyLicenseNumber) {
+		boolean exists = storeRepository.findStoreWithMenusAndImagesBySafetyLicenseNumber(safetyLicenseNumber)
+			.isPresent();
+		return exists ? DUPLICATE.get() : POSSIBLE.get();
 	}
 
 	public Store findLoginStore() {
